localize all text

--- a/complete.html
+++ b/complete.html
@@ -9,7 +9,7 @@
     <div class="header"><img src="./icon.png"/> <h1 class="header-title">Chrome Audio Capture</h1></div>
     <div class="inner">
       <div class="progress">
-        <label for="progrssContainer">Encoding Progress:</label>
+        <label for="progrssContainer" id="encodingLabel">Encoding Progress:</label>
         <div id="progressContainer">
           <div id="encodeProgress"></div>
         </div>
