--- a/options.html
+++ b/options.html
@@ -10,6 +10,7 @@
     <div class="inner">
       <h2 id="options">Options</h2>
       <ul class="options-list">
+        <li><input type="checkbox" id="quick"><label for="quick" id="quickLabel">Quick capture by clicking this extension icon</label></li>
         <li><input type="checkbox" id="mute"><label for="mute" id="muteLabel">Mute tabs that are being captured</label></li>
         <li class="time"><label for="maxTime"><span id="maxLabel">Maximum capture time </span><p class="limit" id="maxLimit">(enter value from 1 - 20)</p>: </label><input type="text" id="maxTime"><span id="mins"> min(s)</span></li>
         <li><input type="checkbox" id="removeLimit"><label for="removeLimit" id="removeLimitLabel">Remove capture time limit (not recommended)</label></li>
