--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
       <ul class="options-list">
         <li><input type="checkbox" id="quick"><label for="quick" id="quickLabel">Quick capture by clicking this extension icon</label></li>
         <li><input type="checkbox" id="mute"><label for="mute" id="muteLabel">Mute tabs that are being captured</label></li>
-        <li class="time"><label for="maxTime"><span id="maxLabel">Maximum capture time </span><p class="limit" id="maxLimit">(enter value from 1 - 20)</p>: </label><input type="text" id="maxTime"><span id="mins"> min(s)</span></li>
+        <li class="time"><label for="maxTime"><span id="maxLabel">Maximum capture time </span><p class="limit" id="maxLimit">(enter value from 1 - 20)</p>: </label><input type="number" id="maxTime" min="1" max="20" step="1"><span id="mins"> min(s)</span></li>
         <li><input type="checkbox" id="removeLimit"><label for="removeLimit" id="removeLimitLabel">Remove capture time limit (not recommended)</label></li>
         <li id="outputType"><label for="outputType" id="outputTypeLabel">Output file format:</label>
           <input class="radioChoice" id="mp3" type="radio" name="format" value="mp3"> <label for="mp3">.mp3</label>
