implement silence signal detection and auto stop

--- a/options.html
+++ b/options.html
@@ -13,6 +13,7 @@
         <li><input type="checkbox" id="quick"><label for="quick" id="quickLabel">Quick capture by clicking this extension icon</label></li>
         <li><input type="checkbox" id="mute"><label for="mute" id="muteLabel">Mute tabs that are being captured</label></li>
         <li><input type="checkbox" id="detection"><label for="detection" id="detectionLabel">Pause recording until audio output is detected</label></li>
+        <li id="endDetectionLi"><input type="checkbox" id="endDetection"><label for="endDetection" id="endDetectionLabel">Auto stop on detect silence signals</label></li>
         <li class="time"><label for="maxTime"><span id="maxLabel">Maximum capture time </span><p class="limit" id="maxLimit">(enter value from 1 - 20)</p>: </label><input type="number" id="maxTime" min="1" max="20" step="1"><span id="mins"> min(s)</span></li>
         <li><input type="checkbox" id="removeLimit"><label for="removeLimit" id="removeLimitLabel">Remove capture time limit (not recommended)</label></li>
         <li id="outputType"><label for="outputType" id="outputTypeLabel">Output file format:</label>
